--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@
 name: Ameya Prabhu
 
 # Short bio or description (displayed in the header)
-description: Good samaritan, gifted napper. I waste time wisely.
-#I care about AGI, EA, Economics and Optimization.
+description: Secretly a wizard, ruling (aka optimizing) the world.
+#
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/drimpossible/drimpossible.github.io/master/images/profile_image.jpg
+avatar: https://raw.githubusercontent.com/bayesianconspirator/bayesianconspirator.github.io/master/images/profile_image.jpg
 
 #
 # Flags below are optional
@@ -19,8 +19,8 @@ avatar: https://raw.githubusercontent.com/drimpossible/drimpossible.github.io/ma
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: drimpossible+website@mailfence.com
-  github: drimpossible
+  email: bayesianconspirator+website@mailfence.com
+  github: bayesianconspirator
   linkedin: ameya-prabhu-28a812105
   rss: Feed
   twitter: # your twitter profile, e.g. @talking_machines
@@ -34,7 +34,7 @@ google_analytics: UA-133859280-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: http://drimpossible.github.io
+url: http://bayesianconspirator.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
