--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Ameya Prabhu
 
 # Short bio or description (displayed in the header)
-description: Secretly a wizard, ruling (aka optimizing) the world.
+description: Secretly a wizard, ruling (optimizing) the world.
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
