--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@
 name: Ameya Prabhu
 
 # Short bio or description (displayed in the header)
-description: Secretly a wizard, ruling (optimizing) the world.
+description: Secretly a wizard, ruling (optimizing) the world
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/bayesianconspirator/bayesianconspirator.github.io/master/images/profile_image.jpg
+avatar: https://raw.githubusercontent.com/bayesianconspirator/bayesianconspirator.github.io/master/images/profile_image.png
 
 #
 # Flags below are optional
@@ -22,8 +22,8 @@ footer-links:
   email: bayesianconspirator+website@mailfence.com
   github: bayesianconspirator
   linkedin: ameya-prabhu-28a812105
-  rss: Feed
-  twitter: # your twitter profile, e.g. @talking_machines
+#  rss:
+#  twitter: # your twitter profile, e.g. @talking_machines
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
@@ -34,13 +34,13 @@ google_analytics: UA-139135152-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: http://bayesianconspirator.github.io
+url: https://bayesianconspirator.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "/about"
 
 #
 # !! You don't need to change any of the configuration flags below !!
