--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ avatar: https://raw.githubusercontent.com/bayesianconspirator/bayesianconspirato
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: bayesianconspirator+website@mailfence.com
-  github: bayesianconspirator
+  email: bayesiankitten+website@mailfence.com
+  github: bayesiankitten
   linkedin: ameya-prabhu-28a812105
 #  rss:
 #  twitter: # your twitter profile, e.g. @talking_machines
@@ -34,7 +34,7 @@ google_analytics: UA-139135152-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: https://bayesianconspirator.github.io
+url: https://bayesiankitten.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
