--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Ameya Prabhu
+name: Bayesic Blog
 
 # Short bio or description (displayed in the header)
-description: Secretly a wizard, ruling (optimizing) the world
+description: A litter of purrsuasive armchair theories
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
@@ -21,7 +21,7 @@ footer-links:
   dribbble:
   email: bayesianconspirator+website@mailfence.com
   github: bayesianconspirator
-  linkedin: ameya-prabhu-28a812105
+#  linkedin: ameya-prabhu-28a812105
 #  rss:
 #  twitter: # your twitter profile, e.g. @talking_machines
 
@@ -30,7 +30,6 @@ footer-links:
 disqus: bayesianconspirator-github-io-1
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-139135152-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
