cleaning up blog

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: A litter of purrsuasive armchair theories
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/bayesianconspirator/bayesianconspirator.github.io/master/images/profile_image.png
+avatar: https://raw.githubusercontent.com/bayesiankitten/bayesiankitten.github.io/master/images/profile_image.jpeg
 
 #
 # Flags below are optional
