--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: The Bayesic Blog
+name: Ameya Prabhu
 
 # Short bio or description (displayed in the header)
 description: A litter of purrsuasive armchair theories
