updates to about

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Ameya Prabhu
 
 # Short bio or description (displayed in the header)
-description: A litter of purrsuasive armchair theories
+description: TBA
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
