--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Ameya Prabhu
 
 # Short bio or description (displayed in the header)
-description: TBA
+description: Workers of the World .. Marginalize the 1%!
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
