--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Ameya Prabhu
 
 # Short bio or description (displayed in the header)
-description: Workers of the world- marginalize away the 1%!
+description: Workers of the world- marginalize the 1% away!
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
